# BLESS-STORAGE-FOR-BLESS-NETOWRK

./: .gitignore  README.md  bls.toml  index.ts  package.json
bless-ui/: README.md  package.json
bless-ui/public/: index.html  manifest.json
bless-ui/src/: README.md  index.js
bless-ui/src/layout/: MainLayout.js  README.md
bless-ui/src/pages/: App.js  FileCard.js  FileExplorer.js  Home.js  README.md  TextToSpeechPlayer.js  storageService.js  theme.js
bless-ui/src/utils/: .env  README.md  verifySignature.js
http-proxy/: README.md  package.json  server.js
http-proxy/audio/: README.md
http-proxy/ipfs-cache/: README.md
http-proxy/metadata/: README.md
http-proxy/middleware/: README.md  auth.js
http-proxy/routes/: README.md  audio.js
http-proxy/services/: README.md  cacheCleaner.js  rust.wasm  wasm_handler.js
http-proxy/utils/: README.md  metadata_helpers.js
public/: index.html  main.223cdf48.js
rust-backend/: Cargo.toml  README.md
rust-backend/src/: README.md  bless.rs  main.rs
rust-backend/src/storage/: README.md  ipfs_cli.rs  ipfs_http.rs  mod.rs
