[package]
name = "bless_storage_node"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = { version = "0.2.100", features = ["serde"] }
hex = "0.4"



wasm-bindgen-futures = "0.4.50"
sha2 = "0.10.9"

[profile.release]
strip = true
